# mipt_inf

./: .gitignore  README.md  lab5.ipynb  lpr2022_lab3.ipynb  lpr2022_lab4.ipynb  lpr6.ipynb
1_sem/Lab8/: 1_task.py  lab8.ipynb
1_sem/Lab9/: gun.py  trash.py
2 sem/: first_test.cpp  inside_triangle.cpp  mergesort.cpp  mergesort.ipynb  no_optimise.csv  optimised.csv  optimised_merge.cpp  prostye.cpp
2 sem/Calc/: CMakeLists.txt  infix.cpp  infix.h  infix_not_tests.cpp  infix_test.cpp
2 sem/GameLife/: GameLife.vcxproj  GameLife.vcxproj.filters
2 sem/LifeGame/: CMakeLists.txt
2 sem/LifeGame/include/: Animal.h  Behaviour.h  BehaviourPredatorEat.h  Cell.h  Coords.h  Entity.h  Herbivorous.h  Predator.h  SimConfig.h  SimManager.h  Types.h
2 sem/LifeGame/src/: Animal.cpp  BehaviourHerbivorousEat.cpp  BehaviourMitosis.cpp  BehaviourPredatorEat.cpp  Cell.cpp  Predator.cpp  SimManager.cpp  Utils.cpp  main.cpp
2 sem/LinkArr/: LinkArr.h  main.cpp
2 sem/Pointers/: shared_ptr.h  sptr.cpp  sptr.h  unique_ptr.h
2 sem/Queue/: CircBuff.h  DoubleVectorQueue.h  LinkArr.h  Vector.cpp  Vector.h  queue.cpp  test_queue.cpp
2 sem/String/: String.h
2 sem/rpol/: desktop.ini
3_sem/10th_week/: for_each_task_1.cpp  for_each_task_2.cpp
3_sem/8th_week/: for_each_task_1.cpp
3_sem/arrays/: array_v1.cpp  array_v2.cpp
3_sem/enter_test/: first.cpp  first_sem.cpp
3_sem/fifth_week/: from_string.cpp  math_ex.cpp
Lab8/: balls.py
cuda/: pi.cu
final task/: 1.cpp
hehe/: lavygin_norm_full.tif  lavygin_ox_full.tif  rep.tex  test.ipynb  решетки.xlsx
ml/: lab01_ml_pipeline.ipynb
(+63 files in other folders)
